--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "newman run test/ -e test/"
+    "start:dev": "nodemon src/server.js",
+    "test": "newman run test/Open Music API V1 Test.postman_collection.json -e test/OpenMusic API Test.postman_environment.json"
   },
   "author": "Misyael Yosevian Wiarda",
   "license": "ISC",
