--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "api project for dicoding course submission",
   "main": "src/server.js",
-  "directories": {
-    "test": "test"
-  },
+  "type": "module",
   "scripts": {
     "start:prod": "NODE_ENV=production node .",
     "start:dev": "nodemon .",
