--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.10",
+    "auto-bind": "^5.0.1",
     "dotenv": "^16.4.5",
     "joi": "^17.13.3",
     "nanoid": "^5.0.7",
