--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "open-music-api-v1",
-  "version": "1.0.0",
+  "name": "open-music-api-v2",
+  "version": "2.0.0",
   "description": "api project for dicoding course submission",
   "main": "src/server.js",
   "type": "module",
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.10",
+    "@hapi/jwt": "^3.2.0",
     "auto-bind": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "joi": "^17.13.3",
     "nanoid": "^5.0.7",
