--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@hapi/hapi": "^21.3.10",
     "@hapi/jwt": "^3.2.0",
+    "amqplib": "^0.10.4",
     "auto-bind": "^5.0.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
