--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "joi": "^17.13.3",
     "nanoid": "^5.0.7",
     "node-pg-migrate": "^7.5.2",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "redis": "^4.6.15"
   }
 }
