feat: change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "open-music-api-v2",
+  "name": "open-music-api",
   "version": "3.0.0",
   "description": "api project for dicoding course submission",
   "main": "src/server.js",
